--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <p id="resultado"></p>
     </div>
-    <script src="/salario.js"></script>
-    <script src="/validarnumeros.js"></script>
+    <script src="salario.js"></script>
+    <script src="validarnumeros.js"></script>
   </body>
 </html>
